deploy/k8s/01-postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: ecommerce
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          args:
            - "postgres"
            - "-c"
            - "max_connections=400"
            - "-c"
            - "shared_buffers=256MB"
            - "-c"
            - "synchronous_commit=off"
          ports:
            - containerPort: 5432
              name: postgres
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 2000m
              memory: 2Gi
          volumeMounts:
            - name: init-sql
              mountPath: /docker-entrypoint-initdb.d/001_init.sql
              subPath: 001_init.sql
      volumes:
        - name: init-sql
          configMap:
            name: postgres-init-sql
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: ecommerce
spec:
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
  selector:
    app: postgres
